--- a/ScreenshotTool/dialog.ui
+++ b/ScreenshotTool/dialog.ui
@@ -7,41 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>186</width>
-    <height>125</height>
+    <height>230</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="1">
-    <widget class="QPushButton" name="screenshot">
-     <property name="text">
-      <string>Screen Shot</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="QLineEdit" name="base_name">
-     <property name="text">
-      <string>Model_name</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QSpinBox" name="width">
-     <property name="minimum">
-      <number>64</number>
-     </property>
-     <property name="maximum">
-      <number>1024</number>
-     </property>
-     <property name="value">
-      <number>128</number>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
+   <item row="4" column="1">
     <widget class="QSpinBox" name="height">
      <property name="minimum">
       <number>64</number>
@@ -57,24 +30,110 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="0" column="0" colspan="2">
+    <widget class="QLineEdit" name="base_name">
+     <property name="text">
+      <string>Model_name</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
     <widget class="QPushButton" name="Cancel">
      <property name="text">
       <string>Cancel</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="4" column="0">
+    <widget class="QSpinBox" name="width">
+     <property name="minimum">
+      <number>64</number>
+     </property>
+     <property name="maximum">
+      <number>1024</number>
+     </property>
+     <property name="value">
+      <number>128</number>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Height</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QPushButton" name="screenshot">
+     <property name="text">
+      <string>Screen Shot</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Width</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="label_2">
+   <item row="1" column="0" colspan="2">
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Views</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="top">
+        <property name="text">
+         <string>Top</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="persp">
+        <property name="text">
+         <string>Persp</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QCheckBox" name="side">
+        <property name="text">
+         <string>Side</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="front">
+        <property name="text">
+         <string>Front</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QCheckBox" name="frame_all">
      <property name="text">
-      <string>Height</string>
+      <string>Frame All</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
